--- a/Inicio.html
+++ b/Inicio.html
@@ -46,7 +46,6 @@
         <input type="button" value="Siguiente" id="btnAnalizar" onclick="analizarPalabra()">
 
 
-
         <label for="" class="analizador_label" id="lblErrores">Errores</label>
         <textarea class="analizador_textarea" disabled="disabled" id="salidaErrores" rows="15" cols="23"></textarea>
 
@@ -60,6 +59,8 @@
 
 
     <script type="text/javascript" src="js/LecturaArchivo.js"></script>
+    <script type="text/javascript" src="js/Token.js"></script>
+    <script type="text/javascript" src="js/AnalizadorLexico.js"></script>
 </body>
 
 </html>
