--- a/Inicio.html
+++ b/Inicio.html
@@ -61,6 +61,7 @@
     <script type="text/javascript" src="js/LecturaArchivo.js"></script>
     <script type="text/javascript" src="js/Token.js"></script>
     <script type="text/javascript" src="js/AnalizadorLexico.js"></script>
+    <script type="text/javascript" src="js/AnalizadoresIndependientes.js"></script>
 </body>
 
 </html>
