--- a/Automatas.html
+++ b/Automatas.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+    <!--Barra de navegacion-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Analizador Lexico</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -29,7 +29,7 @@
             </ul>
         </div>
     </nav>
-
+    <!--Muestra las imagenes de los automatas-->
     <img src="images/AutomataEnteroDecimal.png" alt="" width="500" title="Automata entero decimal">
     <img src="images/AutomataIdentificador.png" alt="" width="500" title="Automata identificador">
     <img src="images/AutomataReservadaBoolean.png" alt="" width="500" title="Automata reservada boolean">
