--- a/Perfil.html
+++ b/Perfil.html
@@ -21,7 +21,7 @@
 <body>
 
 
-
+    <!--Barra de navegacion-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Analizador Lexico</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -51,7 +51,7 @@
 
 
         </div>
-
+        <!--Descripcion del programador-->
         <div id="objective">
             <h2>Descripcion</h2>
             <p>
@@ -63,6 +63,7 @@
 
         <div class="clear"></div>
 
+        <!--Escribe los datos personales del programador-->
         <dl>
             <dd class="clear"></dd>
 
