--- a/Inicio.html
+++ b/Inicio.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-
+    <!--Barra de navegacion-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Analizador Lexico</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
